# Othello

./: CMakeLists.txt  MatrixElement.cpp  MatrixElement.h  Words  main.cpp
Headers/: GameWindow.h  SetWindow.h  UI.h
Sources/: GameWindow.cpp  SetWindow.cpp  UI.cpp
